# bottle

./: Cargo.toml  Dockerfile
res/: home.html
src/: bottle.rs  data.rs  main.rs  model.rs  schema.rs  web.rs
