[package]
name = "bottle"
edition = "2021"
version = "1.2.4"
authors = ["Thomas-QM <thomas@engineeringvirtue.net>"]

[features]
watch = ["handlebars-iron/watch"]

[dependencies]
typemap = "0.3.3"
discord_bots = "1.0.0"
serenity = "0.11.6"
r2d2 = "0.8.10"
time = "0.3"
chrono = "0.4"
uuid = { version = "1.4.1", features=["v4", "serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
serde = "1.0.174"
serde_derive = "1.0.174"
serde_json = "1.0"
envy = "0.4.2"
kankyo = "0.3"

simple-logging = "2.0.2"
log = "0.4.19"

iron = "0.6.1"
params = "0.8.0"
mount = "0.4.0"
staticfile = "0.5.0"
router = "0.6.0"
handlebars-iron = "0.29.0"
oauth2 = "4.4.1"
reqwest = "0.11.18"
cookie = "0.17.0"
futures-lite = "1.13.0"
